[package]
name = "okta-awscli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-iam = "0.21.0"
aws-sdk-sts = "0.21.0"
aws-sig-auth = "0.51.0"
aws-smithy-http = "0.51.0"
configparser = "3.0.2"
dirs = "4.0.0"
once_cell = "1.16.0"
tokio = { version = "1.21.2", features = ["full"] }
ureq = { version = "2.5.0", features = ["cookies"] }
